Share bar fix for overlap on feature article

--- a/drupal/sites/all/themes/fresh/sass/fresh.scss
+++ b/drupal/sites/all/themes/fresh/sass/fresh.scss
@@ -286,8 +286,7 @@ blockquote.pullquote {
   }
 }
 /****** Override for sticky **********/
-.social.sticky,
-.campaign-experience .social.cic-sticky {
+.social.sticky {
   position: fixed !important;
 }
 
